chore: Fix problem with text overflowing next line in end screen block

--- a/style.css
+++ b/style.css
@@ -284,6 +284,10 @@ hr {
 
     .endScreenBlock{
         align-items: center;
+        /* fix problem where the text goes over next line of text */
+        white-space: nowrap;
+        
+
     }
 
     .emptySpace3
